sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/WhileStatement.sand
pub class WhileStatement {
    foo() {
        while cond {

        }

        while cond {
            foo();
        }
    }
}