sandc/test/fixtures/astRegression/shouldFail/productions/ifExpression/IfPseudex.sand
pub class IfPseudex {
    foo() {
        (
            if cond {
                x();
                x
            } else {
                x
            }
        )
    }
}